feat: Add need_mentoring and available_to_mentor search queries
